@@ -9,6 +9,8 @@ VP 10.0.0 Changelog
      - pull lightsource->ambient down to 0,0,0 (otherwise table will look 'hazy')
      - crank up lightsource->emission to 255,255,255 and tweak the color from there (to get a good contrast on the shading)
      - tweak the lightsource->height and the two emission-scales
+     - if doing nightmods, try to avoid manually toning down all images and materials, but rather just use the light emission settings
+       (this will allow the user to tweak the brightness of the table on his/her own afterwards)
      - revisit all physics settings, even if you used VP9Physmod(5) before (only the re-enabled friction and scatter in the physmod5 case though)
      - take a look into the new material editor and assign a material to each object on the table
      - use flashers when doing special lighting effects/night mods, otherwise try to stick with the newly redone light elements
@@ -117,6 +119,7 @@ VP 10.0.0 Changelog
 - flasher supports custom shapes and multi texturing. You can define two separate images and define a filter to blend these two images.
   in addition there is now a modulate option to define how the flasher blends with the underlying elements (0(=full additive)..1=(only modulate))
   plus the opacity and amount parameters can be set to values > 100%
+  to fade a set of flashers in/out easily you can use the IntensityScale in the script, so that you do not need to use different opacity values
   look into the CommandReference.txt for additional changes to the functions that can be used
   
 - collections can now group elements together. If you enable 'Group elements together' flag and you click on one element of the group all other members 
